update composed mana and conditional mana usage
- update composed mana with runtime player allocation for gaining mana and cost to prevent ability
- update conditional mana usage when paying and add conditions to ManaPoolItem